build: Updating eslint-config-wikimedia to 0.29.1
The following rules are failing and were disabled:
* no-jquery/no-done-fail
* unicorn/prefer-includes

This also includes upgrade of @wmde/eslint-config-wikimedia-typescript
to resolve dependency

Change-Id: Ib0899286fcb57727c690c64a45e5bda1f8484ed2

--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
 		"cypress:parallel": "cypress-parallel -s cypress:run -t 2 -d './cypress/e2e/**/*.cy.ts'"
 	},
 	"devDependencies": {
-		"@wmde/eslint-config-wikimedia-typescript": "^0.2.12",
+		"@wmde/eslint-config-wikimedia-typescript": "0.2.13",
 		"cypress": "^13.17.0",
 		"cypress-parallel": "^0.14.0",
 		"cypress-wikibase-api": "^0.0.6",
-		"eslint-config-wikimedia": "^0.28.2",
+		"eslint-config-wikimedia": "0.29.1",
 		"eslint-plugin-chai-friendly": "^1.0.1",
 		"eslint-plugin-cypress": "^3.6.0",
 		"eslint-plugin-jsonc": "^2.18.2",
