--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,9 @@
 		"promise/no-native": "error",
 		"mediawiki/no-nodelist-unsupported-methods": "warn",
 		"no-var": "off",
-		"prefer-arrow-callback": "off"
+		"prefer-arrow-callback": "off",
+		"no-jquery/no-done-fail": "warn",
+		"unicorn/prefer-includes": "warn"
 	},
 	"settings": {
 		"jsdoc": {
